--- a/anchorlink.html
+++ b/anchorlink.html
@@ -9,7 +9,7 @@
 <body>
     <body>
         <h1>Hi Capybara!!!</h1>
-        <img src="images/capy.jpg">
+        <img src="image/Adult-capybara.webp">
         <p>@r3m303</p>
         <p>I love to code HTML</p>
     </body>
