--- a/csslayout_task01.html
+++ b/csslayout_task01.html
@@ -18,11 +18,11 @@
           max-width: 700px;
           list-style:none;
           padding: 0;
-          margin: 0;
+          margin: 0 auto;
           display: flex;
           flex-direction: row;
           justify-content: space-between;
-        
+          align-items: center;
         }
 
         nav a:link,
