--- a/helloworld.html
+++ b/helloworld.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World HTML</h1>
+    <script src="script.js"></script>
+    <button id="button" onclick="Hello()">Click me</button>
 </body>
 </html>
