add button click

--- a/helloworld.html
+++ b/helloworld.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <script src="script.js"></script>
-    <button id="button" onclick="Hello()">Click me</button>
+    <button onclick="Hello()">Click me</button>
+    <p id="button"></p>
 </body>
 </html>
